# gdbus-example

./: .autotools  .cproject  .project  README.md  configure.ac
src/: Makefile.am  gdbus_client.c  gdbus_server.c  greeting_interface.xml
